# lantern-python-test

./: Makefile  PDF_SERVICE_DOCS.md  README.md  pyproject.toml
src/: logger.py  main.py
src/config/: pdf.py  settings.py
src/models/company/: company_info.py
src/routers/: company.py
src/schemas/company/: company_discrepancy.py  company_discrepancy_response.py
src/services/: company.py
src/store/: db.py  get_company_info_from_store.py
tests/fixtures/: company_info.py
tests/integration_tests/: test_company.py
tests/unit_tests/services/: test_company.py  test_pdf.py
tests/unit_tests/store/: test_get_company_info_from_store.py
